local/kubernetes/infrastructure/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: logging
  namespace: ""
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  namespace: ""
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress
  namespace: ""
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  namespace: ""
